Fix footer alignment

--- a/luhack_site/static/css/main.css
+++ b/luhack_site/static/css/main.css
@@ -205,10 +205,6 @@ details[open] > summary:after {
     margin: 2em 2em 0;
   }
 
-  .footer {
-    width: 16.666%;
-  }
-
   .search-bar {
     width: 100%;
   }
